salesforce-metadata/force-app/main/default/objects/Deployment_Checklist__c/Deployment_Checklist__c.object-meta.xml
<CustomObject>
    <label>Deployment Checklist</label>
    <nameField>
        <label>Deployment Checklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deployment Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>