salesforce-metadata/force-app/main/default/objects/Deployment_Checklist__c/fields/Checklist_Item__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Item__c</fullName>
    <label>Checklist Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>