salesforce-metadata/force-app/main/default/objects/Deployment_Checklist__c/fields/Release_Batch__c.field-meta.xml
<CustomField>
    <fullName>Release_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Release Batch</label>
    <referenceTo>Release_Batch__c</referenceTo>
    <relationshipLabel>Deployment Checklists</relationshipLabel>
    <relationshipName>Deployment_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>